--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/google.maps": "^3.47.2",
     "@types/react": "^17.0.34",
     "@types/react-slick": "^0.23.7",
+    "@types/tailwindcss": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "autoprefixer": "^10.4.0",
